# blaeck

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  LICENSE-APACHE  LICENSE-MIT  POSTS.md  README.md  RELEASING.md  preview.tape  record.sh  run-example-viewer.sh
.github/workflows/: ci.yml  release.yml
assets/: demo_form.tape  demo_inline.tape  plasma.tape
blaeck/: Cargo.toml  TAFFY_0_9_MIGRATION.md
blaeck-macros/: Cargo.toml
blaeck-macros/src/: lib.rs
blaeck/docs/: 3D_ASCII_ENGINE_RFC.md  ANIMATION_TIMELINE_RFC.md
blaeck/examples/: CAPABILITY_THEATER_SPEC.md  SCALAR_FIELD_DASHBOARD_SPEC.md  animation.rs  async_app.rs  async_demo.rs  autocomplete.rs  banner.rs  barchart.rs  borders.rs  breadcrumbs.rs  components_demo.rs  countdown.rs  cube3d.rs  cube3d_braille.rs  dashboard.rs  demo_form.rs  demo_inline.rs  diff.rs  example_viewer.rs  focus_demo.rs  form_demo.rs  gradient.rs  hello.rs  interactive.rs  keyhints.rs  logbox.rs  logbox_command.rs  markdown.rs  menu.rs  modal.rs  multiselect.rs  nested_test.rs  plasma.rs  polish_demo.rs  preview.rs  progress.rs  quickstart_interactive.rs  quickstart_static.rs  reactive_counter.rs  reactive_list.rs  (+16 more)
blaeck/examples/previews/: animation.rs  async_app.rs  autocomplete.rs  banner.rs  barchart.rs  borders.rs  breadcrumbs.rs  cube3d_braille.rs  dashboard.rs  demo_inline.rs  diff.rs  focus_demo.rs  form_demo.rs  gradient.rs  hello.rs  interactive.rs  keyhints.rs  live.rs  logbox.rs  logbox_command.rs  markdown.rs  menu.rs  mod.rs  modal.rs  multiselect.rs  plasma.rs  polish_demo.rs  preview.rs  quickstart_interactive.rs  reactive_counter.rs  reactive_list.rs  reactive_timeline.rs  select_demo.rs  showcase.rs  sparkline.rs  spinner_demo.rs  stagger_demo.rs  statusbar.rs  syntax.rs  table.rs  (+6 more)
blaeck/examples/tools/: position_editor.rs  scene_editor.rs
blaeck/src/: animation.rs  app.rs  async_runtime.rs  buffer.rs  element.rs  focus.rs  input.rs  layout.rs  lib.rs  log_update.rs  output.rs  renderer.rs  style.rs  timeline.rs
blaeck/src/components/: autocomplete.rs  badge.rs  barchart.rs  blink.rs  box_component.rs  breadcrumbs.rs  checkbox.rs  confirm.rs  diff.rs  divider.rs  gradient.rs  indent.rs  keyhints.rs  link.rs  logbox.rs  markdown.rs  mod.rs  modal.rs  multiselect.rs  newline.rs  progress.rs  select.rs  spacer.rs  sparkline.rs  spinner.rs  static.rs  statusbar.rs  syntax.rs  table.rs  tabs.rs  text.rs  text_input.rs  timer.rs  transform.rs  tree.rs
blaeck/src/reactive/: app.rs  hooks.rs  instance.rs  mod.rs  runtime.rs  scope.rs  signal.rs
docs/: index.html  run-example-viewer.sh
examples/: README.md
